[tool.poetry]
name = "pml-experiments"
version = "0.1.0"
description = ""
authors = ["Nicholas M. Synovic <nicholas.synovic@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.4"
pandas = "^1.4.2"
matplotlib = "^3.5.2"
scipy = "^1.8.1"
scikit-learn = "^1.1.1"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
